kubernetes/ingress/argocd-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-proxy
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 443
      protocol: TCP
